--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
+    "@mui/material": "^5.4.2",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-live-clock": "^5.6.1",
-    "react-scripts": "4.0.3",
+    "react-moment": "^1.1.1",
+    "react-scripts": "^4.0.3",
     "save-dev": "^0.0.1-security",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
