--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "moment": "^2.29.1",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-live-clock": "^5.6.1",
     "react-moment": "^1.1.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
